--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "ext-dom": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-pcre": "*"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0",
