--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
          colors="true"
          cacheDirectory=".phpunit.cache">
     <testsuites>
-        <testsuite name="FancySparql Test Suite">
+        <testsuite name="FancyRDF Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
