--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.3', '8.4', '8.5', '8.6']
+        php-version: [ '8.4', '8.5', '8.6']
 
     steps:
       - name: Checkout
