--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,27 @@
-name: Test
+name: Tests
 
 on:
   push:
   pull_request:
 
 jobs:
+  spell:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '24'
+
+      - name: Install cspell
+        run: npm install -g cspell
+
+      - name: cspell
+        run: make cspell
+
   test:
     runs-on: ubuntu-latest
     strategy:
