Rework reliance on dependencies
This commit removes the Guzzle dependency, adds the xmlreader extension
and introduces a tool to check that the dependencies are accurate. It
also reworks certain parts of the code to replace extensions only used
in one place with native functions.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,12 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: composer
           extensions: curl,dom,json,mbstring,pcre
+
       - name: Install dependencies
         run: composer install --prefer-dist
+
+      - name: composer-dependency-analyser
+        run: make composer-dependency-analyser
 
       - name: parallel-lint
         run: make parallel-lint
