phpstan: don't remember possibly impure function values

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -38,6 +38,7 @@ parameters:
     checkMissingCallableSignature: true
     checkStrictPrintfPlaceholderTypes: true
     checkMissingOverrideMethodAttribute: true
+    rememberPossiblyImpureFunctionValues: false
     exceptions:
         check:
             throwTypeCovariance: true
