--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "php-parallel-lint/php-parallel-lint": "^1.4",
         "doctrine/coding-standard": "^13.0",
         "shipmonk/composer-dependency-analyser": "^1.8",
-        "ext-sockets": "*"
+        "ext-sockets": "*",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +42,8 @@
     "minimum-stability": "stable",
     "config": {
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         }
     }
 }
